making code better

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 
-<body>
+<!-- <body>
 
     <header class="navbar">
         <div class="logo">
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#" class="home-link" >Home</a></li>
+                <li><a href="#" class="home-link">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Emergency</a></li>
@@ -34,10 +34,59 @@
         <div class="hero-text">
             <h4>The Ultimate</h4>
             <h1>Companion For Your Life</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the
+                industry's.</p>
             <a href="#" class="btn">Download App</a>
         </div>
+    </section> -->
+
+    <!-- <section class="service-section">
+        <div class="service-content">
+            <h3>Our Services</h3>
+            <h2>Service at Garrage</h2>
+            <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
+            <div class="button-group">
+                <button class="btn read-more">Read More</button>
+                
+            </div>
+        </div>
+        <div class="service-image">
+            <img src="../public/images/Service-at-garrage2.png" alt="Car Service">
+        </div>
     </section>
+    <p class="unique">Our unique Feature</p> -->
+
+    <section class="features-section">
+    <div class="features-container">
+        <div class="feature-card">
+            <div class="feature-image">
+                <img src="../public/images/An-Ultimate-car-car-companon 1.png" alt="Shield Logo" class="shield-icon">
+                
+            </div>
+            <h2>An Ultimate Car Care Companion</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
+            
+        </div>
+
+        <div class="feature-card">
+            <div class="feature-image">
+                <img src="../public/images/Emergency-Services 1.png" alt="Emergency Service">
+            </div>
+            <h2>24*7 Emergency Service within 30 Minutes</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            
+        </div>
+
+        <div class="feature-card">
+            <div class="feature-image">
+                <img src="../public/images/Door-Step-Services---Mobile 1.png" alt="Doorstep Service">
+            </div>
+            <h2>Door step Service within 60 minutes</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
+            
+        </div>
+    </div>
+</section>
 
 </body>
 
