--- a/views/index.html
+++ b/views/index.html
@@ -38,9 +38,9 @@
                 industry's.</p>
             <a href="#" class="btn">Download App</a>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="service-section">
+    <section class="service-section">
         <div class="service-content">
             <h3>Our Services</h3>
             <h2>Service at Garrage</h2>
@@ -54,7 +54,7 @@
             <img src="../public/images/Service-at-garrage2.png" alt="Car Service">
         </div>
     </section>
-    <p class="unique">Our unique Feature</p> -->
+    <p class="unique">Our unique Feature</p>
 
     <section class="features-section">
     <div class="features-container">
@@ -84,9 +84,90 @@
             <h2>Door step Service within 60 minutes</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
             
+        </div> -->
+
+
+    <section class="how-works">
+        <div class="container">
+            <h2>How Works App</h2>
+
+            <div class="works-grid">
+                <div class="work-item">
+                    <img src="/public/images/Find Services you Want.png" alt="Find Services">
+                    <h3>Find Services you Want</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="work-item">
+                    <img src="/public/images/Send Request For Quotes.png" alt="Send Request">
+                    <h3>Send Request For Quotes</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="work-item">
+                    <img src="/public/images/Get Proposals form Garrages.png" alt="Get Proposals">
+                    <h3>Get Proposals from Garages</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+
+            <div class="works-grid second-row">
+                <div class="work-item">
+                    <img src="/public/images/Book for Proposal.png" alt="Book Proposal">
+                    <h3>Book for Proposal</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="work-item">
+                    <img src="/public/images/Payment for Service.png" alt="Payment">
+                    <h3>Payment for Service</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
         </div>
+    </section>
+    
+    <!-- Testimonial Section -->
+<!-- 
+
+ <br>
+
+    
+    <section class="testimonials">
+        <div class="testimonial-header">
+            <h2>Customer Stories</h2>
+            <p>Discover what our satisfied customers have to say about their experience</p>
+        </div>
+        <div class="testimonial-cards">
+            <div class="testimonial-card">
+                <p>"The convenience of having mechanics come to my home has been a game-changer. I've saved countless
+                    hours and the service quality is outstanding."</p>
+                <div class="customer-info">
+                    <img src="/api/placeholder/50/50" alt="Customer">
+                    <div>
+                        <div class="customer-name">Michael Johnson</div>
+                        <div class="customer-role">Premium Member</div>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <p>"I love how easy the app makes scheduling maintenance. The pricing is transparent and the technicians
+                    are always professional and knowledgeable."</p>
+                <div class="customer-info">
+                    <img src="/api/placeholder/50/50" alt="Customer">
+                    <div>
+                        <div class="customer-name">Sarah Williams</div>
+                        <div class="customer-role">Regular Customer</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  -->
+
+
+
+
+
     </div>
-</section>
+    </section>
 
 </body>
 
