--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 
-<!-- <body>
+<body>
 
     <header class="navbar">
         <div class="logo">
@@ -44,88 +44,115 @@
         <div class="service-content">
             <h3>Our Services</h3>
             <h2>Service at Garrage</h2>
-            <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
+            <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled.</p>
             <div class="button-group">
                 <button class="btn read-more">Read More</button>
-                
+
             </div>
         </div>
         <div class="service-image">
             <img src="../public/images/Service-at-garrage2.png" alt="Car Service">
         </div>
     </section>
+
+
+
     <p class="unique">Our unique Feature</p>
 
     <section class="features-section">
-    <div class="features-container">
-        <div class="feature-card">
-            <div class="feature-image">
-                <img src="../public/images/An-Ultimate-car-car-companon 1.png" alt="Shield Logo" class="shield-icon">
-                
+        <div class="features-container">
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="../public/images/An-Ultimate-car-car-companon 1.png" alt="Shield Logo"
+                        class="shield-icon">
+
+                </div>
+                <h2>An Ultimate Car Care Companion</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type.</p>
+
             </div>
-            <h2>An Ultimate Car Care Companion</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-            
+
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="../public/images/Emergency-Services 1.png" alt="Emergency Service">
+                </div>
+                <h2>24*7 Emergency Service within 30 Minutes</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
+
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="../public/images/Door-Step-Services---Mobile 1.png" alt="Doorstep Service">
+                </div>
+                <h2>Door step Service within 60 minutes</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500.</p>
+
+            </div>
         </div>
 
-        <div class="feature-card">
-            <div class="feature-image">
-                <img src="../public/images/Emergency-Services 1.png" alt="Emergency Service">
-            </div>
-            <h2>24*7 Emergency Service within 30 Minutes</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-            
-        </div>
-
-        <div class="feature-card">
-            <div class="feature-image">
-                <img src="../public/images/Door-Step-Services---Mobile 1.png" alt="Doorstep Service">
-            </div>
-            <h2>Door step Service within 60 minutes</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
-            
-        </div> -->
+    </section>
 
 
     <section class="how-works">
+        <h2>How Works App</h2>
         <div class="container">
-            <h2>How Works App</h2>
-
+            
+    
             <div class="works-grid">
                 <div class="work-item">
-                    <img src="/public/images/Find Services you Want.png" alt="Find Services">
+                    <div class="phone-container">
+                        <img src="/public/images/Find Services you Want.png" alt="Find Services">
+                    </div>
                     <h3>Find Services you Want</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                 </div>
+                
                 <div class="work-item">
-                    <img src="/public/images/Send Request For Quotes.png" alt="Send Request">
+                    <div class="phone-container">
+                        <img src="/public/images/Send Request For Quotes.png" alt="Send Request">
+                    </div>
                     <h3>Send Request For Quotes</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                 </div>
+                
                 <div class="work-item">
-                    <img src="/public/images/Get Proposals form Garrages.png" alt="Get Proposals">
+                    <div class="phone-container">
+                        <img src="/public/images/Get Proposals form Garrages.png" alt="Get Proposals">
+                    </div>
                     <h3>Get Proposals from Garages</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                 </div>
             </div>
-
+    
             <div class="works-grid second-row">
                 <div class="work-item">
-                    <img src="/public/images/Book for Proposal.png" alt="Book Proposal">
+                    <div class="phone-container">
+                        <img src="/public/images/Book for Proposal.png" alt="Book Proposal">
+                    </div>
                     <h3>Book for Proposal</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                 </div>
+                
                 <div class="work-item">
-                    <img src="/public/images/Payment for Service.png" alt="Payment">
+                    <div class="phone-container">
+                        <img src="/public/images/Payment for Service.png" alt="Payment">
+                    </div>
                     <h3>Payment for Service</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- Testimonial Section -->
-<!-- 
+    
 
  <br>
 
@@ -160,14 +187,15 @@
             </div>
         </div>
     </section>
-  -->
+
+
+    
+ 
 
 
 
 
 
-    </div>
-    </section>
 
 </body>
 
