get app section completed

--- a/views/index.html
+++ b/views/index.html
@@ -164,23 +164,25 @@
 
     <section class="testimonials">
         <p class="testimonial-title">Testimonials</p>
-        
+
         <div class="stats-container">
             <div class="stat-item">
                 <h2 class="stat-number">100+</h2>
                 <h3 class="stat-label">Trusted Car Garrages</h3>
             </div>
-            
+
             <div class="stat-item">
                 <h2 class="stat-number">4000+</h2>
                 <h3 class="stat-label">Satisfied Customers</h3>
             </div>
         </div>
-        
+
         <div class="testimonial-slider">
             <div class="testimonial-card">
-                <p class="testimonial-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                
+                <p class="testimonial-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book.</p>
+
                 <div class="rating">
                     <span class="star">★</span>
                     <span class="star">★</span>
@@ -189,9 +191,9 @@
                     <span class="star">★</span>
                     <span class="rating-value">5.0</span>
                 </div>
-                
+
                 <div class="customer-info">
-                    <img src="/api/placeholder/50/50" alt="Customer" class="customer-image">
+                    <img src="../public/images/image 1.png" alt="Customer" class="customer-image">
                     <div class="customer-details">
                         <div class="customer-name">James G. Plumb</div>
                         <div class="customer-role">Lorem Ipsum is simply dummy</div>
@@ -199,10 +201,11 @@
                     <div class="quote-icon">❞</div>
                 </div>
             </div>
-            
+
             <div class="testimonial-card">
-                <p class="testimonial-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                
+                <p class="testimonial-text">It has survived not only five centuries, but also the leap into electronic
+                    typesetting, remaining essentially unchanged.</p>
+
                 <div class="rating">
                     <span class="star">★</span>
                     <span class="star">★</span>
@@ -211,9 +214,9 @@
                     <span class="star">★</span>
                     <span class="rating-value">5.0</span>
                 </div>
-                
+
                 <div class="customer-info">
-                    <img src="/api/placeholder/50/50" alt="Customer" class="customer-image">
+                    <img src="../public/images/image 2.png" alt="Customer" class="customer-image">
                     <div class="customer-details">
                         <div class="customer-name">Joe R. Burkhalter</div>
                         <div class="customer-role">Lorem Ipsum is simply dummy</div>
@@ -222,7 +225,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="testimonial-navigation">
             <button class="nav-button prev">←</button>
             <div class="nav-dots">
@@ -237,6 +240,41 @@
     </section>
 
 
+    <div class="promo-container">
+        <div class="promo-text">
+            <p class="app-title">Refer & Earn the Mobile App</p>
+            <div class="headline">
+                Friends can Sign Up and enjoy<br>
+                <span class="highlight">AED 25</span> in their wallets.
+            </div>
+            <div class="subheading">
+                While you earn <span class="highlight">AED 50</span><br>
+                for each successful registration.
+            </div>
+        </div>
+        <div class="promo-image">
+            <img src="../public/images/Reffer-Friend 1.png" alt="Promo Image">
+        </div>
+    </div>
+
+    <section class="getApp-section">
+        <div class="app-title">Get the App</div>
+        
+        <div class="headline-gold">The Ultimate</div>
+        <div class="headline">Companion For Your Life</div>
+        
+        <div class="subheading">
+            Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since unknown printer.
+        </div>
+
+        <div class="qr-card">
+            <img class="qr-image" src="../public/images/Group 2748.png" alt="QR Code">
+            <div class="qr-text">
+                <div class="qr-title">Scan QR code</div>
+                <div class="qr-subtitle">With your smart phone</div>
+            </div>
+        </div>
+    </section>
 
 
 
